--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="top">
         <div class="header">
-            <img src="img/header_logo.svg" alt="header logo">
+            <img class="header__logo" src="img/header_logo.svg" alt="header logo">
             <div class="header__links">
                 <a class="header__link" href="#">Home</a>
                 <a class="header__link" href="#">Aout Us</a>
